[gd_scene load_steps=2 format=3 uid="uid://3uww4a10rph8"]

[ext_resource type="Script" uid="uid://cfcuxu7se2hxi" path="res://menus/gameplay/gameplay.gd" id="1_a7ncl"]

[node name="Gameplay" type="Node2D"]
script = ExtResource("1_a7ncl")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Hand" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Cut" type="Button" parent="."]
offset_left = -113.0
offset_top = 72.0
offset_right = -45.0
offset_bottom = 103.0
text = "Cut"

[node name="Play" type="Button" parent="."]
offset_left = -34.0
offset_top = 72.0
offset_right = 34.0
offset_bottom = 103.0
text = "Play"

[node name="Discard" type="Button" parent="."]
offset_left = 45.0
offset_top = 72.0
offset_right = 113.0
offset_bottom = 103.0
text = "Discard"

[connection signal="pressed" from="Cut" to="." method="_on_cut_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Discard" to="." method="_on_discard_pressed"]
